--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,17 @@
 		<title>OiSYS Application</title>
 	</head>
 	<body>
-		<h1>Start building Application now</h1>
+		<h1>Work Completed by Shruti Patel</h1>
+		<ol>
+			<li><a href="Assignments/formValidationEventListner.html">Form Validation</a></li>
+			<li><a href="Assignments/DOM Exercise.html">CheckBox using JavaScript</a></li>
+			<li><a href="Assignments/DOM Exercise JQuery.html">CheckBox using JQuery</a></li>
+			<li><a href="Assignments/FahrenToCels.html">Fahren To Cels</a></li>
+			<li><a href="Assignments/html-cssAssignment.html">HTML-CSS Assignment</a></li>
+			<li><a href="Assignments/Form.html">Form</a></li>	
+			<li><a href="Assignments/Form-2.html">Form2</a></li>
+			<li><a href="Assignments/AngularJS-store.html">AngularJS-store</a></li>	
+		</ol>	
+		</ol>
 	</body>
 </html>
