--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 			<li><a href="Assignments/Form.html">Form</a></li>	
 			<li><a href="Assignments/Form-2.html">Form2</a></li>
 			<li><a href="Assignments/AngularJS-store.html">AngularJS-store</a></li>	
+			<li><a href="Assignments/HandlebarsJS.html">HandlebarsJS-store</a></li>	
 		</ol>	
 		</ol>
 	</body>
