--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,9 @@
 			<li><a href="Assignments/html-cssAssignment.html">HTML-CSS Assignment</a></li>
 			<li><a href="Assignments/Form.html">Form</a></li>	
 			<li><a href="Assignments/Form-2.html">Form2</a></li>
-			<li><a href="Assignments/AngularJS-store.html">AngularJS-store</a></li>	
+			<li><a href="Assignments/Bootstrap-store.html">Bootsrap</a></li>	
 			<li><a href="Assignments/HandlebarsJS.html">HandlebarsJS-store</a></li>	
+			<li><a href="Assignments/AngularJS.html">AngularJS-store</a></li>	
 		</ol>	
 		</ol>
 	</body>
