--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@
 			<li><a href="Assignments/Form-2.html">Form2</a></li>
 			<li><a href="Assignments/Bootstrap-store.html">Bootsrap</a></li>	
 			<li><a href="Assignments/HandlebarsJS.html">HandlebarsJS-store</a></li>	
-			<li><a href="Assignments/AngularJS.html">AngularJS-store</a></li>	
+			<li><a href="Assignments/AngularJS.html">AngularJS-store</a></li>
+			<li><a href="Assignments/AngularJS-factory.html">AngularJS-store-using factory</a></li>
+			<li><a href="Assignments/AngularJS-services.html">AngularJS-store-using services</a></li>	
 		</ol>	
 		</ol>
 	</body>
